--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style.css" rel="stylesheet">
-    <title>bookit-frontend</title>
+    <title>BooKIt</title>
+    <meta name="description" content="Book amazing travel experiences with BookIt.">
   </head>
   <body>
     <div id="root"></div>
