--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="Book amazing travel experiences with BookIt.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
